🔧fix view on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -41,3 +41,13 @@ body {
     cursor: pointer;
     opacity: 0.5;
 }
+
+/* Media query for mobile devices */
+@media (max-width: 600px) {
+    .button-theme {
+        top: 10px;
+        right: 10px;
+        width: 60px;
+        height: 60px;
+    }
+}
